lower example image size

--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@
     % grid,
     % tics=10
   ]
-  {raspberry_pie_cropped} %<{"type": "crop", "description": "", "aspect": 1.43}>
+  {raspberry-pie-cropped} %<{"type": "crop", "description": "", "aspect": 1.43}>
   \put (1,2) {
     \parbox[b]{0.3\picwidth}
     {
