fix picture margin

--- a/main.tex
+++ b/main.tex
@@ -72,7 +72,7 @@
 \begin{document}
 \pagestyle{empty}
 %<{"type": "group", "description": "Recipe image"}
-\hspace{-\picmargin}
+\hspace{-\picmargin}%
 \begin{overpic}[
     width=\picwidth,
     height=0.70\picwidth,
